--- a/essays/westphalia/westphalia.qmd
+++ b/essays/westphalia/westphalia.qmd
@@ -69,9 +69,14 @@ read_excel("lobby.xlsx", sheet = "Data") |>
           hjust = 1.5, 
           nudge_x = 0.5, 
           nudge_y = 0.2, 
-          size = 2.5,
+          size = 3.1,
           color = "blue") +
   theme_light() +
+  scale_x_continuous(breaks = seq(1998, 2023, 
+                                  by = 1)) +
+  theme(axis.text.x = element_text(angle = 45, 
+                                   vjust = 1, 
+                                   hjust = 1)) +
   labs(y = "Spending in billions of USD",
        x = "Years")
 
